--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -92,13 +92,17 @@
   height: auto;
   min-height: 35rem;
   padding: 15rem 0;
-  background: -webkit-gradient(linear, left top, left bottom, from(rgba(22, 22, 22, 0.3)), color-stop(75%, rgba(22, 22, 22, 0.7)), to(#161616)), url("../img/background-min.png");
-  background: linear-gradient(to bottom, rgba(22, 22, 22, 0.3) 0%, rgba(22, 22, 22, 0.7) 75%, #161616 100%), url("../img/background-min.png");
+  /* background: -webkit-gradient(linear, left top, left bottom, from(rgba(22, 22, 22, 0.3)), color-stop(75%, rgba(22, 22, 22, 0.7)), to(#161616)), url("../img/background-min.png"); */
+  /* background: linear-gradient(to bottom, rgba(22, 22, 22, 0.3) 0%, rgba(22, 22, 22, 0.7) 75%, #161616 100%), url("../img/background-min.png"); */
+  background: linear-gradient(to top, rgba(255,255,255,0.3) 0%, rgba(33, 150, 243, 0.7) 75%, #2196f3 100%), url("../img/background-min.png");
+  /* background: url("../img/background-min.png"); */
+  /* background-color: black; */
   background-position: center;
   background-repeat: no-repeat;
   background-attachment: scroll;
   background-size: cover;
   color: white;
+  /* filter: invert(1); */
 }
 .masthead h1 {
   font-family: 'Varela Round';
@@ -177,17 +181,29 @@
 }
 
 .projects-section {
+  background-color: white!important;
   padding: 10rem 0;
 }
 
-.projects-section .featured-text {
+.projects-section .featured-text-right {
   padding: 2rem;
 }
 
 @media (min-width: 992px) {
-  .projects-section .featured-text {
+  .projects-section .featured-text-right {
     padding: 0 0 0 2rem;
     border-left: 0.5rem solid #2196f3;
+  }
+}
+
+.projects-section .featured-text-left {
+  padding: 2rem;
+}
+
+@media (min-width: 992px) {
+  .projects-section .featured-text-left {
+    padding: 0 2rem 0 0;
+    border-right: 0.5rem solid #2196f3;
   }
 }
 
