--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -153,6 +153,15 @@
   border: 0;
 }
 
+.pad {
+  margin-top: 100px;
+  margin-bottom: 100px;
+}
+
+.primary-theme {
+  color: #2196f3;
+}
+
 .btn-primary {
   background-color: #2196f3;
 }
