--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -147,6 +147,9 @@
 }
 
 @media (min-width: 992px) {
+  .owl-icon {
+    margin-bottom: -40px;
+  }
   .masthead {
     height: 100vh;
     padding: 0;
