--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -82,6 +82,9 @@
   }
   #mainNav.navbar-shrink {
     background-color: #fff;
+    -webkit-box-shadow: 0px 1px 5px 0px rgba(0,0,0,0.4);
+    box-shadow: 0px 1px 5px 0px rgba(0,0,0,0.4);
+    -moz-box-shadow: 0px 1px 5px 0px rgba(0,0,0,0.4);
   }
   #mainNav.navbar-shrink .navbar-brand {
     color: #161616;
